plugins {
    id 'dev.architectury.loom' version '1.14-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.5-SNAPSHOT'
    id 'com.gradleup.shadow' version '9.2.2' apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

allprojects {
    version = "${rootProject.mod_version}+${rootProject.minecraft_version}"
    group = rootProject.maven_group
}

subprojects {
    apply plugin: 'dev.architectury.loom-no-remap'
    apply plugin: 'architectury-plugin'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = rootProject.archives_name
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 25
    }
}
